--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.navercorp.arcus/arcus-java-client -->
+        <dependency>
+            <groupId>com.navercorp.arcus</groupId>
+            <artifactId>arcus-java-client</artifactId>
+            <version>1.13.2</version>
+        </dependency>
+
+
         <!-- 로거 의존성을 추가합니다. -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -46,5 +54,4 @@
             <version>3.22.0</version>
         </dependency>
     </dependencies>
-
 </project>
